frontend login API connectivity + CORS enabled